--- a/finance_manager_frontend/package.json
+++ b/finance_manager_frontend/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "@tanstack/react-query": "^5.74.8",
     "axios": "^1.8.1",
     "dotenv": "^16.4.7",
     "expo": "^52.0.41",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "jest-expo": "~52.0.6",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -28,8 +30,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@types/react-native-dotenv": "^0.2.2",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-test-renderer": "^18.3.1",
     "typescript": "^5.3.3"
   },
   "private": true
